<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/quicksand_semibold"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:text="@string/new_transaction" />

    <TextView
        android:id="@+id/messageText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/quicksand_light"
        android:gravity="center"
        tools:text="@string/new_transaction_message"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialogAmountText"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_amount" />

        <EditText
            android:id="@+id/dialogAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialogCoinText"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_coin"
            android:layout_gravity="center"/>

        <Spinner
            android:id="@+id/dialogCoin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="12dp"
            android:layout_weight="1"
            android:fontFamily="@font/quicksand_light"
            android:text="@string/dialog_cancel"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:backgroundTint="@android:color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/acceptButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="12dp"
            android:layout_weight="1"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/dialog_accept"
            android:textAllCaps="false" />

    </LinearLayout>

</LinearLayout>